@@ -365,22 +365,22 @@ static void QueueTests(ImGuiTestEngine* engine)
     g_App.TestsToRun.clear();
 }
 
-static void FindFFMPEG(char* out, int out_len)
+static void FindVideoEncoder(char* out, int out_len)
 {
     IM_ASSERT(out != NULL);
     IM_ASSERT(out_len > 0);
-    Str64 ffmpeg_path("imgui_tests/tools/");                // Assume execution from root repository folder by default (linux/macos)
-    if (!ImFileExist(ffmpeg_path.c_str()))
-        ImFileFindInParents("tools/", 3, &ffmpeg_path);     // Assume execution from imgui_tests/$(Configuration) (visual studio)
-    ffmpeg_path.append("ffmpeg");                           // Look for ffmpeg executable in tools folder (windows/macos)
+    Str64 encoder_path("imgui_tests/tools/");                // Assume execution from root repository folder by default (linux/macos)
+    if (!ImFileExist(encoder_path.c_str()))
+        ImFileFindInParents("tools/", 3, &encoder_path);     // Assume execution from imgui_tests/$(Configuration) (visual studio)
+    encoder_path.append("ffmpeg");                           // Look for ffmpeg executable in tools folder (windows/macos)
 #if _WIN32
-    ffmpeg_path.append(".exe");
+    encoder_path.append(".exe");
 #else
-    if (!ImFileExist(ffmpeg_path.c_str()))
-        ffmpeg_path.set("/usr/bin/ffmpeg");                 // Use system version path (linux)
+    if (!ImFileExist(encoder_path.c_str()))
+        encoder_path.set("/usr/bin/ffmpeg");                 // Use system version path (linux)
 #endif
-    if (ImFileExist(ffmpeg_path.c_str()))
-        ImStrncpy(out, ffmpeg_path.c_str(), out_len);
+    if (ImFileExist(encoder_path.c_str()))
+        ImStrncpy(out, encoder_path.c_str(), out_len);
     else
         *out = 0;
 }
@@ -485,10 +485,10 @@ int main(int argc, char** argv)
     test_io.ConfigVerboseLevelOnError = g_App.OptVerboseLevelError;
     test_io.ConfigNoThrottle = g_App.OptNoThrottle;
     test_io.PerfStressAmount = g_App.OptStressAmount;
-    FindFFMPEG(test_io.VideoCaptureFFMPEGPath, IM_ARRAYSIZE(test_io.VideoCaptureFFMPEGPath));
-    ImStrncpy(test_io.VideoCaptureFFMPEGParams, "-r $FPS -f rawvideo -pix_fmt rgba -s $WIDTHx$HEIGHT -i - "
+    FindVideoEncoder(test_io.VideoCaptureEncoderPath, IM_ARRAYSIZE(test_io.VideoCaptureEncoderPath));
+    ImStrncpy(test_io.VideoCaptureEncoderParams, "-r $FPS -f rawvideo -pix_fmt rgba -s $WIDTHx$HEIGHT -i - "
         "-threads 0 -vsync 0 -preset ultrafast -y -pix_fmt yuv420p -crf 20 -hide_banner -loglevel error $OUTPUT",
-        IM_ARRAYSIZE(test_io.VideoCaptureFFMPEGParams));
+        IM_ARRAYSIZE(test_io.VideoCaptureEncoderParams));
 
     if (g_App.OptGui)
     {
